Shrink lanthanide and actinide placeholder symbols and prevent from wrapping

--- a/src/components/periodic-table/periodic-table-component/periodic-table.module.less
+++ b/src/components/periodic-table/periodic-table-component/periodic-table.module.less
@@ -126,3 +126,9 @@
 .table-transition-wrapper-small {
   max-height: (9 * @element-height-small) + @spacer-small + (9 * @grid-gap-small);
 }
+
+.mat-element.simple.element-lanthanoid-transitional-metal.disabled .mat-symbol,
+.mat-element.simple.element-actinoid-transitional-metal.disabled .mat-symbol {
+  font-size: 0.5rem;
+  white-space: nowrap;
+}
